2005-07-25  Jan Hubicka  <jh@suse.cz>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* emulparams/elf_x86_64.sh (LARGE_SECTIONS): New.

	* scripttempl/elf.sc: Updated for large section support.

2005-07-21  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* configure.tgt: Remove i[3-7]86-*-rtemself*.
	Remove sparc-*-rtemself*.

2005-07-21  Ben Elliston  <bje@gnu.org>

	* ldgram.y (ldgram_want_filename): Remove unused static.

2005-07-20  DJ Delorie  <dj@redhat.com>

	* emulparams/elf32m32c.sh (TEMPLATE_NAME): New.
	(EXTRA_EM_FILE): New.

2005-07-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ldmain.c (main): Reindent.

2005-07-19  Paul Brook  <paul@codesourcery.com>

	* configure.host (HOSTING_CRT0): Parse output of gcc --help --verbose
	to determine dynamic linker name.

2005-07-18  Nick Clifton  <nickc@redhat.com>

	* configure.tgt: Restore alpha ordering to list of arches.

2005-07-16  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em (gld*_provide_init_fini_syms): Prototype.
	(gld*_before_allocation): Call ldemul_do_assignments rather than
	gld*_provide_init_fini_syms directly.
	* emultempl/ppc32elf.em (gld*_after_allocation): Delete.
	(ppc_do_assignments): New function.
	(LDEMUL_AFTER_ALLOCATION): Don't define.
	(LDEMUL_DO_ASSIGNMENTS): Define.

2005-07-16  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	(emipsidt.c, emipsidtl.c): Depend on generic.em.
	* Makefile.in: Regenerate.

2005-07-15  Alan Modra  <amodra@bigpond.net.au>

	* ldemul.c (ldemul_do_assignments): New function.
	(do_assignments_default): New function.
	* ldemul.h (ldemul_do_assignments): Declare.
	(do_assignments_default): Declare.
	(struct ld_emulation_xfer_struct): Add do_assignments.
	* ldlang.c (lang_do_assignments) Call ldemul_do_assignments.
	* emultempl/aix.em (ld_*_emulation): Init do_assignments field.
	* emultempl/armcoff.em: Likewise.
	* emultempl/beos.em: Likewise.
	* emultempl/generic.em: Likewise.
	* emultempl/gld960.em: Likewise.